[project]
name = "diane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.51.2",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]
